# otus-algorithms

01-intro/: divmod.ram  sort.ram
02-arrays/: README.md
02-arrays/mycollections/: arrays.py  queues.py
04-algebraic/: README.md
04-algebraic/fib/: fib.py
04-algebraic/fib/test/: fib_test.py
04-algebraic/gcd/: gcd.py
04-algebraic/gcd/test/: gcd_test.py
04-algebraic/pow/: pow.py
04-algebraic/pow/test/: pow_test.py
04-algebraic/prime/: prime.py
04-algebraic/prime/test/: prime_test.py
05-sorting/: Pipfile  README.md  make_plot.py  pytest.ini
05-sorting/insort/: insort.py
05-sorting/shsort/: shsort.py
05-sorting/test/: sort_test.py
06-heapsort/: Pipfile  README.md
06-heapsort/heapsort/: heapsort.py  pq.py
06-heapsort/heapsort/test/: heapsort_test.py  pq_test.py
07-mergesort/: README.md
07-mergesort/mergesort/: merge.py
09-avltree/: README.md
09-avltree/avltree/: avltree.py
10-rbtree/rbtree-py/: Pipfile  README.md
10-rbtree/rbtree-rs/: Cargo.toml  README.md
11-btree/btree-rs/: Cargo.toml  README.md  btree-test.sh
11-btree/btree-rs/benches/: benchmarks.rs
11-btree/btree-rs/docs/: task_mgr.plantuml
11-btree/btree-rs/src/: lib.rs
15-kosaraju/kosaraju-py/: README.md
16-tsort/tsort-py/: README.md
18-dijkstra/dijkstra-py/: README.md
20-heapmanager/: README.md  slab_allocator.cpp
22-pattern-searching/pattern-searching-py/: README.md
22-pattern-searching/pattern-searching-rs/: Cargo.toml  README.md
24-encryption/encryption-py/: README.md
24-encryption/encryption-rs/: Cargo.toml  README.md
(+22 files in other folders)
