[package]
name = "btree-rs"
version = "0.1.0"
authors = ["nekogda@"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
lru-cache = "0.1.2"
rand = "0.7.2"
memmap = "0.7.0"
bincode = "1.1.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.6.2"

[[bench]]
name = "benchmarks"
harness = false
